# AIRI-Project

./: .gitignore  AIRI_ARCHITECTURE.md  AIRI_ETHICS_SAFETY.md  AIRI_MENTAL_MODEL.md  BUGS.md  README.md  ROADMAP.md  TODO.md  accessibility_service_config.xml  build.gradle  gradlew  settings.gradle
.github/workflows/: android_build.yml  build.yml  main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airi_native.cpp  native-lib.cpp
app/src/main/java/com/airi/: PlanDto.kt
app/src/main/java/com/airi/assistant/: AIRIApplication.kt  AiriAccessibilityService.kt  AiriCore.kt  AiriDatabase.kt  AiriPersona.kt  AuditManager.kt  AvatarView.kt  ChatAdapter  ChatAdapter.kt  ChatModel.kt  DialogueRhythmEngine.kt  EmotionEngine.kt  EthicalMemoryController.kt  GracefulDetachmentProtocol.kt  GuardianEngine.kt  LlamaManager.kt  LlamaNative.kt  MainActivity.kt  MemoryDao.kt  MemoryEntities.kt  MemoryManager.kt  ModelDownloadManager.kt  ModelDownloadService.kt  N8nIntegration.kt  OverlayService.kt  PatternAggregator.kt  PolicyEngine.kt  RelationshipBoundaryPolicy.kt  SensoryBudgetManager.kt  SystemControl.kt  VoiceManager.kt
app/src/main/java/com/airi/assistant/accessibility/: AIRIAccessibilityService.kt  ActionExecutor.kt  BehaviorEngine.kt  BehaviorMemory.kt  ContextActionEngine.kt  ContextClassifier.kt  ContextEngine.kt  ContextIntelligence.kt  IntentDetector.kt  IntentPredictor.kt  IntentType.kt  NodeFinder.kt  OverlayBridge.kt  ScreenContextHolder.kt  SessionMemory.kt  SmartActionEngine.kt  SuggestionEngine.kt  UITreeScanner.kt
app/src/main/java/com/airi/assistant/adaptive/: AdaptiveDecisionEngine.kt  InteractionTracker.kt  SuggestionScoreEngine.kt
app/src/main/java/com/airi/assistant/agent/: ActionPlan.kt  AdaptiveBehaviorEngine.kt  BehaviorPolicy.kt  ConfidenceScorer.kt  ExecutionResult.kt
app/src/main/java/com/airi/assistant/agent/command/: AccessibilityCommandBridge.kt  CommandResult.kt  CommandRouter.kt
app/src/main/java/com/airi/assistant/agent/context/: ContextProvider.kt
app/src/main/java/com/airi/assistant/agent/decision/: DecisionEngine.kt
app/src/main/java/com/airi/assistant/agent/node/: NodeActionExecutor.kt  NodeMatcher.kt  NodeScanner.kt  SemanticRanker.kt
app/src/main/java/com/airi/assistant/agent/reinforcement/: AdaptivePolicy.kt  ReinforcementMemory.kt
app/src/main/java/com/airi/assistant/agent/runtime/: AgentExecutor.kt  ExecutionContext.kt  ExecutionState.kt  StepResult.kt
app/src/main/java/com/airi/assistant/agent/task/: TaskChain.kt  TaskOrchestrator.kt  TaskStep.kt
app/src/main/java/com/airi/assistant/agent/validation/: TemporalValidator.kt  UiStateHasher.kt
app/src/main/java/com/airi/assistant/ai/: IntentDetector.kt
app/src/main/java/com/airi/assistant/brain/: ActionPlanner.kt  AgentGoal.kt  AiriBrainController.kt  AiriIntent.kt  BrainIO.kt  BrainInput.kt  BrainManager.kt  BrainModels.kt  BrainOutput.kt  GoalBuilder.kt  GoalExecutor.kt  Intent.kt  IntentEngine.kt  IntentType.kt  PlanGenerator.kt  PlanParser.kt  PlanStep.kt  PlanValidator.kt  RecoveryManager.kt  UIMemory.kt  ValidationException.kt
app/src/main/java/com/airi/assistant/core/: IntentRouter.kt  PromptBuilder.kt  ScreenHasher.kt  UnifiedCognitiveLoop.kt
app/src/main/java/com/airi/assistant/data/: AppDatabase.kt  BehaviorStatsDao.kt  BehaviorStatsEntity.kt  ContextCacheDao.kt  ContextCacheEntity.kt  ContextEngine.kt  Entity: ContextCacheEntity.kt  Entity: UsageStatEntity.kt  UsageStatEntity.kt  UsageStatsDao.kt
app/src/main/java/com/airi/assistant/learning/: UILearningEngine.kt
app/src/main/java/com/airi/assistant/overlay/: DebugOverlayService  DebugOverlayService.kt  OverlayBridge.kt  OverlayService.kt
app/src/main/java/com/airi/assistant/planner/: ExecutionLogger.kt  ExecutionRecord.kt  ExperienceStore.kt  PlanScorer.kt
app/src/main/java/com/airi/assistant/tools/: ToolDefinition.kt  ToolExecutor.kt  ToolRegistry.kt  ToolScanner.kt
app/src/main/java/com/airi/assistant/world/: ContextSnapshot.kt  RiskEstimator.kt  WorldState.kt  WorldStateManager.kt
app/src/main/java/com/airi/core/: NativeBridge.kt
app/src/main/java/com/airi/core/chain/: AgentGoal.kt  TaskChainer.kt
app/src/main/java/com/airi/core/loop/: CognitiveLoopContract.kt
app/src/main/java/com/airi/core/memory/: MemoryRepository.kt
app/src/main/java/com/airi/core/model/: ContextSnapshot.kt  DecisionResult.kt  EmotionalState.kt  IntentData.kt  ModelManager.kt
app/src/main/java/com/airi/core/policy/: PolicyResult.kt
app/src/main/res/layout/: chat_layout.xml  item_chat_ai.xml  item_chat_user.xml  overlay_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  airi_accessibility_config.xml
core/: build.gradle
core/src/main/java/com/airi/core/chain/: AdaptiveStrategy.kt  AgentGoal.kt  Chain DSL  ExecutionResult.kt  FailureStrategy.kt  GoalDsl.kt  GoalExecutionState.kt  PlanStep.kt  RetryPolicy.kt  StrategySelector.kt  TaskChainer.kt  TemporalVerifier.kt
github/workflows/: build.yml
